--- a/.github/workflows/Action.yml
+++ b/.github/workflows/Action.yml
@@ -14,10 +14,13 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Display Python version
         run: python -c "import sys; print(sys.version)" > python_version_${{ matrix.python-version }}.txt
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: python_version_${{ matrix.python-version }}.txt
